--- a/one.html
+++ b/one.html
@@ -20,6 +20,6 @@
 
 <div class="desc-process"> CLICK HERE TO CONTINUE! </div>
 <div > 
-   <a href="two.html"><button class ="desc-button">GO</button></a></div>
+   <a href="index.php"><button class ="desc-button">GO</button></a></div>
  </body>
 </html>
